# et-edit

./: .gitignore  AUTHORS  Makefile  Makefile.in  README  autogen.sh  config.h.in  configure  configure.ac  et-edit.c  et-edit.h  index.html  makefile  params.json  print-glasses.c
src/: Makefile.am  Makefile.in  TODO-Makefile  backup_undo.c  clip_functions.c  constructive_methods.c  cursor_functions.c  edge_functions.c  et-define.h  et-edit.c  et-edit.h  et-types.h  et-variables.c  et-variables.h  export_c_menu.c  export_c_ve.c  export_menu.c  export_povray.c  expose_callbacks.c  font_data.c  font_data.include  graph_functions.c  group_functions.c  io_functions.c  key_callbacks.c  light_functions.c  make_font_data_c.bash  make_font_data_include.bash  make_implicit_rules.bash  make_naive_makefile.bash  makefile  menu_F1.c  menu_F2.c  menu_F3.c  menu_F4.c  menu_F5.c  menu_F7.c  menu_text.c  povray_menu.c  redraw_functions.c  (+9 more)
src/include/: backup_undo.c  clip_functions.c  cursor_functions.c  edge_functions.c  et-edit.h  export_c_ve.c  export_pcl.c  expose_callbacks.c  key_callbacks.c  redraw_functions.c  reduce_functions.c  screen_functions.c  terminal_menus.c  transformation_functions.c
src/include/ui/: export_menu.c  menu_F3.c  menu_F4.c  menu_F5.c  menu_F7.c  root_menu.c  terminal_menus.c  ui.c
src/res/et-fonts/alphanum/: 0_6x10.et  1_6x10.et  2_6x10.et  4_6x10.et  6_6x10.et  7_6x10.et  8_6x10.et  D_6x10.et  F_6x10.et  G_6x10.et  H_6x10.et  I_6x10.et  J_6x10.et  K_6x10.et  L_6x10.et  M_6x10.et  N_6x10.et  P_6x10.et  Q_6x10.et  S_6x10.et  T_6x10.et  X_6x10.et  Y_6x10.et  Z_6x10.et  font_0  font_1  font_2  font_3  font_4  font_5  font_6  font_7  font_8  font_9  font_A  (+25 more)
(+102 files in other folders)
